argocd/manifests/blog-web-deployment.yml
#blog-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-web
  template:
    metadata:
      labels:
        app: blog-web
    spec:
      containers:
        - name: blog-web
          image: blog-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
