argocd/manifests/blog-postgres-service.yml
#blog-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-postgres-service
spec:
  selector:
    app: blog-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
