argocd/manifests/blog-ingress.yml
#blog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blogapp
spec:
  rules:
    - host: blogapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-web-service
                port:
                  number: 80
